# SLCL

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  readme.md
examples/: Makefile
examples/src/: libtest.c  libtest_lib.c  mmaptest.c  sigtest.c  socktest.c
include/SLCL/: Config.h  Errors.h  Filesystem.h  Library.h  Mmap.h  Network.h  Signals.h
src/: Errors.c  Filesystem.c  InternalErrors.h  Library.c  Mmap.c  Network.c  Signals.c
